# phase-align

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: imfilebrowser.h  main.cpp  processing.hpp
